# api-python-openapi-demo

./: .gitignore  README.md  pyproject.toml
api_demo/: main.py
