[tool.poetry]
name = "api-demo"
version = "0.1.0"
description = ""
authors = ["mobo <morgan.bohn@pc-scol.fr>"]
readme = "README.md"
packages = [{include = "api_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
openapi-python-client = "^0.14.1"
ins-gestion-client = {path = "generated/ins-gestion"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
